@@ -6,6 +6,8 @@
   + No strings, only slices are returned as part of the parser result. 
     Parslet::Slice is almost a string class, but one that remembers the 
     source offset. This has also bought us a slight speedup.
+    
+  + require 'parslet/convenience' now brings #parse_with_debug to all parslets.
 
 = 1.1.1 / 4Feb2011
 
